2006-08-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/__init__.py: set menu and toolbar sensitivity
    * olive/frontend/handler.py: set context menu sensitivity
    * olive/backend/info.py: implemented is_branch()
    * olive/frontend/gtk/__init__.py: applied Diff toolbutton menu
    * olive/frontend/gtk/menu.py: implemented the Diff toolbutton menu
    * cmenu.ui: added Diff toolbutton menu; removed Log from right context menu
    * olive.glade: swapped Diff and Log toolbuttons; coverted log button to an
      ordinary GtkToolButton
    * olive/frontend/gtk/__init__.py: added win32 compatibility
    * olive/frontend/gtk/menu.py: added win32 compatibility
    * olive/frontend/gtk/branch.py: fixed a typo

2006-08-15  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/menu.py: upgraded according to the OliveDialog API
      changes; HIGify; load proper icons
    * olive.glade: Close button should be the default on the Informations window
    * olive.glade: added View menu
    * olive/frontend/gtk/handler.py: implement the signal handlers
    * olive/frontend/gtk/__init__.py: connect the signals
    * TODO: some items marked as [DONE]
    * icons/olive-gtk.png: added application icon
    * olive-gtk.desktop: added desktop entry
    * setup.py: modified respectively

2006-08-13  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/branch.py: display number of revisions branched
    * olive/frontend/gtk/*: use new dialog interface with detailed descriptions
    * olive/frontend/gtk/dialog.py: modified according to GNOME HIG (primary
      and secondary text)
    * TODO: some more items added
    * olive.glade: Push window should not be visible by default
    * olive/frontend/gtk/push.py: fixed a bug if no push location known; user
      gets an error if directory is not a branch
    * olive.glade: some GNOME HIG-compilant changes:
       - place OK buttons to the right side